[tool.poetry]
name = "machine_learning_04"
version = "0.1.0"
description = ""
authors = ["jimkoch <jimkoch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
